@@ -4,6 +4,8 @@ BuildingsPy Changelog
 Version 1.5.0, xxx, 2014 -- Release 1.5
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 - Added regression tests for OpenModelica.
+- Corrected bug that lead to files such as .DStore in Resources/Scripts
+  to be processed as if they were scripts that run unit tests.
 
 Version 1.4.0, February 28, 2014 -- Release 1.4
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
